# Prism-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CLAUDE.md  DESIGN.md  DESIGN.zh-CN.md  README.md  README.zh-CN.md  package-lock.json  package.json  skills-lock.json
agent-sidecar/: package.json  tsconfig.json
agent-sidecar/src/: appServer.ts  approval.ts  bridge.ts  http.ts  index.ts  messageTimeline.test.ts  messageTimeline.ts  sessions.ts  titleGenerator.ts  types.ts  writeDiff.test.ts  writeDiff.ts
docs/: AGENTS.zh-CN.md  DESIGN.zh-CN.md  README.zh-CN.md  THIRD_PARTY_FONTS.md  plan-codex-backend.md  wsl-debug-workflow.md
docs/superpowers/specs/: 2026-04-17-agent-thinking-timeline-design.md  2026-04-18-scrollbar-press-glow-design.md  2026-04-18-welcome-subtitle-design.md
scripts/: build-tauri-windows.ps1  dev-desktop.mjs  dev-tauri-windows.ps1  dev-web.mjs  generate_prism_icons.py  rebuild-desktop-dev-windows.ps1  reset-desktop-dev-windows.ps1
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_sidecar.rs  codex_sidecar.rs  lib.rs  main.rs
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/public/: icon-preview.html
web/src/: App.tsx  index.css  index.css.test.ts  main.tsx
web/src/agent/: AgentAppLayout.tsx  AgentChatPanel.tsx  client.ts  sessionStore.timeline.test.ts  sessionStore.ts  useAgentChat.ts  workspaceSelection.ts
web/src/codex/: CodexAppLayout.tsx  CodexChatPanel.tsx  (+3 more)
(+52 files in other folders)
